# lpc2148-realtime-webserver

./: .gitignore  Notes.txt  README.md  old codes.txt  old codes_1.txt
PPTs & DOCs/: Embedded-Web-Server-on-LPC2148 1st.pptx  MP Final.pptx  ecg_synop_1.docx  (+2 more)
webSERVER_1_2/: CMakeLists.txt  Makefile  SERVER.build_log.htm  SERVER.hex  SERVER.uvgui.admin  SERVER.uvgui_admin.bak  SERVER.uvopt  SERVER.uvproj  SERVER_Target 1.dep  SERVER_uvopt.bak  SERVER_uvproj.bak  lpc2148_flash.ld  main.crf  main.d  mongoose.crf  mongoose.d  mongoose_custom_impl.crf  mongoose_custom_impl.d  startup.lst
webSERVER_1_2/FRONTEND/: app.py
webSERVER_1_2/FRONTEND/templates/: index.html
webSERVER_1_2/RANDOM DATA SIMULATION/: Demo.c  ENC28J60.h  GetData.c  Sensor_rand.c  enc28j60_driver.c  enc28j60_driver.h  index.html  mainSUMEDH.c  sensor_data.txt  server.c  spi_init.c
webSERVER_1_2/RANDOM DATA SIMULATION/New folder/: Sensor_rand.c  mongoose.h  mongoose_config.h  mongoose_custom_config.h  mongoose_custom_impl.c  spi_init.c  sys_stat_h.h
webSERVER_1_2/inc/: ENC28J60.h  arpa_inet.h  bool.h  custom_errno.h  custom_time.h  direct.h  fd_set_def.h  lpc214x.h  mongoose.h  mongoose_custom_config.h  mongoose_custom_impl.h  my_sys_time.h  netinet_in.h  platform_defs.h  portable_restrict.h  process.h  sensorData.h  std_bool.h  sys_select.h  sys_socket.h  sys_stat_h.h  sys_type.h  timeval_def.h  unistd.h  windows.h  winerror.h  winsock2.h  ws2tcpip.h
webSERVER_1_2/src/: ENC28J60_driver.c  Sensor_rand.c  Startup.s  main.c  mongoose.c  mongoose_custom_impl.c  mongoose_ws.c  mongoose_ws_custom.c
(+2 files in other folders)
